@@ -737,7 +737,7 @@ install_file(FileName, InstallDir, Succeeded) -->
 		)),
 	globals__io_lookup_string_option(install_command, InstallCommand),
 	{ Command = string__join_list("	",
-		quote_args([InstallCommand, FileName, InstallDir])) },
+		map(quote_arg, [InstallCommand, FileName, InstallDir])) },
 	io__output_stream(OutputStream),
 	invoke_shell_command(OutputStream, verbose, Command, Succeeded).
 
